Symbolic mode error fixed, tests pass.